--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
 		<canvas width="300" height="300" data-plotlist="{
             v1: new Vector(0.5, 0.5, 0),
             another: Vector(-0.5, -0.5, 0)
-        }" data-transform="new Matrix()"></canvas>
+        }" data-transform="Matrix.Build(-0.6978895804347302, 0.7160962652167931, -0.012500898496896158, 0,
+0.3386683930463337, 0.3145775886786195, -0.8867607683319085, 0,
+-0.6310735718377739, -0.6230947597627031, -0.46205959278453745, 0,
+0, 0, 0, 1)"></canvas>
 	</body>
 </html>
